--- a/templates/check.html
+++ b/templates/check.html
@@ -36,5 +36,5 @@
 </table>
 -->
 <script src="/static/js/location.js"></script>
- <a href="/register/count" role="button">戻る</a>
+ <a href="/register/login/count" role="button">戻る</a>
 {% endblock %}
