--- a/templates/count.html
+++ b/templates/count.html
@@ -20,12 +20,12 @@
     <div class="form-group"> 
       <div class="form-column"> 
         {% for i in range(-5, 0) %}
-          <input class="form-number" type="radio" name="impression" value="{{ i }}">{{ i }}
+          <input class="form-number1" type="radio" name="impression" value="{{ i }}">{{ i }}
         {% endfor %}
       </div>
       <div class="form-column"> 
         {% for i in range(1, 6) %}
-          <input class="form-number" type="radio" name="impression" value="{{ i }}">{{ i }}
+          <input class="form-number2" type="radio" name="impression" value="{{ i }}">{{ i }}
         {% endfor %}
       </div> 
     </div>
